syntax = "proto3";

package file;

option go_package="baremetal-ctl/proto";

service FileManager {
    rpc UploadFile(stream UploadRequest) returns (UploadResponse);
    rpc DownloadFile(DownloadRequest) returns (stream DownloadResponse);
}

message UploadRequest {
    bytes chunk = 1;
}

message UploadResponse {
    string file_name = 1;
}

message DownloadRequest {
    string file_name = 1;
}

message DownloadResponse {
    bytes chunk = 1;
}